RESOLVED FIXED130683
Optimizing string construction for type error in JSNavigatorCustom.cpp
https://bugs.webkit.org/show_bug.cgi?id=130683
Summary Optimizing string construction for type error in JSNavigatorCustom.cpp
Thiago de Barros Lacerda
Reported 2014-03-24 10:40:41 PDT
Optimizing string construction for type error in JSNavigatorCustom.cpp
Attachments
Patch (2.18 KB, patch)
2014-03-24 10:43 PDT, Thiago de Barros Lacerda
no flags
Thiago de Barros Lacerda
Comment 1 2014-03-24 10:43:52 PDT
WebKit Commit Bot
Comment 2 2014-03-24 16:44:51 PDT
Comment on attachment 227667 [details] Patch Clearing flags on attachment: 227667 Committed r166207: <http://trac.webkit.org/changeset/166207>
WebKit Commit Bot
Comment 3 2014-03-24 16:44:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.