Optimizing string construction for type error in JSNavigatorCustom.cpp https://bugs.webkit.org/show_bug.cgi?id=130683

Reviewed by Eric Carlson.

* bindings/js/JSNavigatorCustom.cpp:
(WebCore::JSNavigator::webkitGetUserMedia):


Canonical link: https://commits.webkit.org/148738@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166207 268f45cc-cd09-0410-ab3c-d52691b4dbfc